# ROS_Midterm

./: README.md  frames_2025-12-05_05.31.31.gv
src/msg_interface/: CMakeLists.txt  package.xml
src/msg_interface/action/: FindItem.action  GoToId.action
src/msg_interface/msg/: ArucoDetection.msg
src/msg_interface/srv/: SetDetectTarget.srv
src/project/: package.xml  setup.py
src/project/launch/: master.launch.py
src/project/project/: aruco_to_forklift_node.py  drone_patrol_node.py  forklift_node.py
src/project_description/: CMakeLists.txt  package.xml
src/project_description/config/: item_db.yaml
src/project_description/models/: warehouse_env.sdf
src/project_description/models/Warehouse/: model.sdf
src/project_description/models/X4_GPS_RGBD/: model.sdf
src/project_description/models/aruco_visual_marker_3/: model.config  model.sdf
src/project_description/models/aruco_visual_marker_3_pad/: model.config  model.sdf
src/project_description/models/aruco_visual_marker_4/: model.config  model.sdf
src/project_description/models/aruco_visual_marker_4_pad/: model.config  model.sdf
src/project_description/models/aruco_visual_marker_5/: model.config  model.sdf
src/project_description/models/aruco_visual_marker_5_pad/: model.config  model.sdf
src/project_description/models/empty_shelf/: model.config  model.sdf
src/project_description/models/turtlebot3_burger/: model.sdf
